:chart_with_upwards_trend: [ WIP ]: Correcting CardMovie component styles on mobile from section element

--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -1,3 +1,4 @@
+// menu mobile variables
 $hamburger-layer-color: var(--white_EAE) !default;
 $hamburger-layer-width: 24px !default;
 $hamburger-layer-height: 2px !default;
@@ -329,6 +330,8 @@ $hamburger-layer-height: 2px !default;
                   &:last-of-type {
                     grid-template-columns: 1fr;
                     margin: min(2.25rem, 10.8vw) 0 min(5rem, 22.9vw);
+
+                    background: green;
 
                     > div + div {
                       margin-top: min(2.5rem, 12vw);
